# enlightenment

./: .gitignore  .travis.yml  BasisProject.cmake  CMakeLists.txt  COPYING.txt  CTestConfig.cmake  ChangeLog.txt  INSTALL.md  README.md
config/: BasisBootstrapping.cmake  FindBASIS.cmake  Findgio.cmake  Findglib.cmake  Findgobject.cmake
doc/: CMakeLists.txt  changelog.rst  download.rst  help.rst  install.rst  intro.rst  people.rst  quickstart.rst  reference.rst
doc/images/: cmake-structure.drawio  enl-global-structure.drawio
driver/: CMakeLists.txt
driver/ercp/: CMakeLists.txt  README.md  ercp.c
engine/: README.md
engine/imh/: 1d.c  1d.h  README.md  data.h  error.c  error.h  imh.c  imh.h  packing.c  packing.h
example/: example-1.c  example-2.c
include/enlightenment/: enlightenment.h
include/enlightenment/api/: driver.h  engine.h
include/enlightenment/common/: column.h  data_column.h  database.h  descriptor.h  error.h  primary_column.h  row.h  server.h  table.h
include/enlightenment/server/: driver.h  error.h  exitstate.h  server.h
src/: CMakeLists.txt
src/api/: driver.c  engine.c  engine.h
src/common/: column.c  data_column.c  database.c  descriptor.c  error.c  primary_column.c  row.c  server.c  table.c
src/server/: driver.c  error.c  main.c  server.c
test/: CMakeLists.txt
test/travis/: build.sh  cmake.sh  depends.sh  doxygen.sh  sphinx.sh
